--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
 # Inventory definition
-
+#-----------------------------------------------------Start POSTGRES &  ETCD-------------------------------------------------------------------
 # etcd configuration
 [etcd_cluster]  # recommendation: 3 or 5-7 nodes
 192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
@@ -31,7 +31,14 @@ replica
 postgresql_users="[{name: 'registry', password: 'registry123'},{name: 'keycloak', password: 'keycloak123'}]"
 postgresql_databases="[{db: 'registry', encoding: 'en_US.UTF-8', lc_collate: 'en_US.UTF-8', lc_ctype: 'en_US.UTF-8', owner: 'registry'},{db: 'keycloak', encoding: 'en_US.UTF-8', lc_collate: 'en_US.UTF-8', lc_ctype: 'en_US.UTF-8', owner: 'keycloak'}]"
 postgresql_pg_hba="[{type: 'host', database: 'all', user: 'all', address: '0.0.0.0/0', method: 'md5'},{type: 'host', database: 'all', user: 'all', address: '::/0', method: 'md5'}]"
+#-----------------------------------------------------END POSTGRES &  ETCD-------------------------------------------------------------------
 
+
+#-----------------------------------------------------START KAFKA & ZOOKEEPER-------------------------------------------------------------------
+192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.6
+192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.12
+192.168.0.4 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.4
+#-----------------------------------------------------END KAFKA & ZOOKEEPER-------------------------------------------------------------------
 
 # ------------------------------------------------------------------------------
 ; [registry]
