--- a/ansible-cookbooks/kafka-zookeeper/playbook.yml
+++ b/ansible-cookbooks/kafka-zookeeper/playbook.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: kafka
   become: true
   pre_tasks:
     - raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal python-zipstream)
