--- a/ansible-cookbooks/kafka-zookeeper/playbook.yml
+++ b/ansible-cookbooks/kafka-zookeeper/playbook.yml
@@ -2,7 +2,8 @@
 - hosts: kafka
   become: true
   pre_tasks:
-    - raw: test -e /usr/bin/python || (apt -y update && apt install -y python2-minimal zipstream)
+    - raw: test -e /usr/bin/python || (apt -y update && apt install -y python3 python3-zipstream)
+
 - name: Install zookeeper
   hosts: kafka
   become: true
