--- a/ansible-cookbooks/kafka-zookeeper/kafka_and_zookeeper.yml
+++ b/ansible-cookbooks/kafka-zookeeper/kafka_and_zookeeper.yml
@@ -2,13 +2,16 @@
 - hosts: all
   become: true
   pre_tasks:
-    - raw: test -e /usr/bin/python || (apt -y update && apt install -y python3 python-zipstream)
+    - raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal python-zipstream)
 - name: Install zookeeper
   hosts: kafka
   become: true
   roles:
     - role: zookeeper
-      sansible_zookeeper_hosts: zookeeper_nodes
+      sansible_zookeeper_hosts:
+        - 172.31.27.143
+        - 172.31.26.101
+        - 172.31.18.124
 
 - name: Install kafka
   hosts: kafka
@@ -17,4 +20,7 @@
     - role: kafka
       sansible_kafka_listen_address: "{{ ansible_default_ipv4.address }}"
       sansible_kafka_advertised_host_name: "{{ ansible_default_ipv4.address }}"
-      sansible_kafka_zookeeper_hosts: zookeeper_nodes
+      sansible_kafka_zookeeper_hosts:
+        - 172.31.27.143
+        - 172.31.26.101
+        - 172.31.18.124
