--- a/inventory.ini
+++ b/inventory.ini
@@ -69,15 +69,15 @@ calico_rr
 
 #-----------------------------------------------------START ELASTICSEARCH-------------------------------------------------------------------
 [elasticsearch]
-192.168.0.4 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu
+192.168.0.4 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 #-----------------------------------------------------END ELASTICSEARCH-------------------------------------------------------------------
 
 #-----------------------------------------------------START REDIS-------------------------------------------------------------------
 [redis-master]
-192.168.0.13 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu
+192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 [redis-slave]
-192.168.0.12 ansible_ssh_private_key_file=./divoc-perf.pem ansible_ssh_user=ubuntu
+192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 #-----------------------------------------------------END REDIS-------------------------------------------------------------------
 
 # ------------------------------------------------------------------------------
