--- a/ansible-cookbooks/redis/playbook.yml
+++ b/ansible-cookbooks/redis/playbook.yml
@@ -1,11 +1,13 @@
 ---
 - name: configure the master redis server
   hosts: redis-master
+  become: true
   roles:
     - redisdb
 
 - name: configure redis slaves
   hosts: redis-slave
+  become: true
   vars:
     - redis_slaveof: "{{ hostvars['redis-master.example.com'].ansible_eth1.ipv4.address }} {{ redis_port }}"
   roles:
