--- a/ansible-cookbooks/redis/roles/redisdb/handlers/main.yml
+++ b/ansible-cookbooks/redis/roles/redisdb/handlers/main.yml
@@ -1,5 +1,7 @@
 ---
 - name: "restart redis"
+  become: true
+  become_user: root
   service:
     name: "{{ redis_service_name }}"
     state: restarted
