--- a/ansible-cookbooks/redis/roles/redisdb/defaults/main.yml
+++ b/ansible-cookbooks/redis/roles/redisdb/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 ## Installation options
-redis_version: 5.0.7
+redis_version: 6.2.6
 redis_install_dir: /opt/redis
 redis_dir: /var/lib/redis/{{ redis_port }}
 redis_config_file_name: "{{ redis_port }}.conf"
@@ -34,7 +34,7 @@ redis_local_facts: true
 redis_service_name: "redis_{{ redis_port }}"
 
 ## Networking/connection options
-redis_bind: 0.0.0.0
+redis_bind: false
 redis_port: 6379
 redis_password: false
 # Slave replication options
@@ -59,7 +59,7 @@ redis_slave_priority: 100
 redis_repl_backlog_size: false
 
 ## Logging
-redis_logfile: '"/var/log/redis.log"'
+redis_logfile: '""'
 # Enable syslog. "yes" or "no"
 redis_syslog_enabled: "yes"
 redis_syslog_ident: "{{ redis_service_name }}"
