--- a/ansible-cookbooks/redis/roles/redisdb/defaults/main.yml
+++ b/ansible-cookbooks/redis/roles/redisdb/defaults/main.yml
@@ -34,7 +34,7 @@ redis_local_facts: true
 redis_service_name: "redis_{{ redis_port }}"
 
 ## Networking/connection options
-redis_bind: false
+redis_bind: 0.0.0.0
 redis_port: 6379
 redis_password: false
 # Slave replication options
