--- a/inventory.ini
+++ b/inventory.ini
@@ -41,7 +41,7 @@ postgresql_pg_hba="[{type: 'host', database: 'all', user: 'all', address: '0.0.0
 192.168.0.27 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.27
 
 [kafka:vars]
-zookeeper_nodes="['192.168.0.26','192.168.0.30','192.168.0.27']"
+zookeeper_nodes="[192.168.0.26,192.168.0.30,192.168.0.27]"
 #-----------------------------------------------------END KAFKA & ZOOKEEPER-------------------------------------------------------------------
 
 #-----------------------------------------------------START KUBERNETES-------------------------------------------------------------------
