--- a/ansible-cookbooks/kafka-zookeeper/playbook.yml
+++ b/ansible-cookbooks/kafka-zookeeper/playbook.yml
@@ -8,7 +8,7 @@
   become: true
   roles:
     - role: zookeeper
-      sansible_zookeeper_hosts: "{{ groups['mainnodes'] | map('extract', hostvars, ['ansible_default_ipv4']) | join(',') }}"
+      sansible_zookeeper_hosts: "{{ groups['kafka'] | map('extract', hostvars, ['ansible_default_ipv4', 'address']) | join(',') }}"
 
 - name: Install kafka
   hosts: kafka
@@ -17,4 +17,4 @@
     - role: kafka
       sansible_kafka_listen_address: "{{ ansible_default_ipv4.address }}"
       sansible_kafka_advertised_host_name: "{{ ansible_default_ipv4.address }}"
-      sansible_kafka_zookeeper_hosts: "{{ groups['mainnodes'] | map('extract', hostvars, ['ansible_default_ipv4']) | join(',') }}"
+      sansible_kafka_zookeeper_hosts: "{{ groups['kafka'] | map('extract', hostvars, ['ansible_default_ipv4', 'address']) | join(',') }}"
