--- a/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/handlers/main.yml
+++ b/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/handlers/main.yml
@@ -2,18 +2,21 @@
 
 - name: start zookeeper
   become: yes
+  become_user: root
   service:
     name: zookeeper
     state: started
 
 - name: stop zookeeper
   become: yes
+  become_user: root
   service:
     name: zookeeper
     state: stopped
 
 - name: restart zookeeper
   become: yes
+  become_user: root
   service:
     name: zookeeper
     state: restarted
