--- a/ansible-cookbooks/kafka-zookeeper/roles/common/tasks/main.yml
+++ b/ansible-cookbooks/kafka-zookeeper/roles/common/tasks/main.yml
@@ -10,28 +10,28 @@
       paths:
         - ../vars
 
-- name: Install epel-release
-  yum:
-    name: "{{ epel_yum }}"
-    state: present
-    update_cache: yes
-  ignore_errors: true
-  register: epel_result
-  when: ansible_os_family == "RedHat"
+# - name: Install epel-release
+#   yum:
+#     name: "{{ epel_yum }}"
+#     state: present
+#     update_cache: yes
+#   ignore_errors: true
+#   register: epel_result
+#   when: ansible_os_family == "RedHat"
 
-- name: Install epel-release (rpm)
-  yum:
-    name: "{{ epel_rpm_url }}"
-    state: present
-  when: ansible_os_family == "RedHat" and epel_result|failed
+# - name: Install epel-release (rpm)
+#   yum:
+#     name: "{{ epel_rpm_url }}"
+#     state: present
+#   when: ansible_os_family == "RedHat" and epel_result|failed
 
-- name: Ensure required packages are installed (yum)
-  yum:
-    name: "{{ item }}"
-    update_cache: yes
-    state: installed
-  with_items: "{{ packages|default([]) }}"
-  when: ansible_os_family == "RedHat"
+# - name: Ensure required packages are installed (yum)
+#   yum:
+#     name: "{{ item }}"
+#     update_cache: yes
+#     state: installed
+#   with_items: "{{ packages|default([]) }}"
+#   when: ansible_os_family == "RedHat"
 
 - name: Ensure required packages are installed (apt)
   apt:
