--- a/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/tasks/main.yml
+++ b/ansible-cookbooks/kafka-zookeeper/roles/zookeeper/tasks/main.yml
@@ -12,7 +12,7 @@
   unarchive: src=/opt/zookeeper-{{ zookeeper_version }}.tar.gz dest=/opt/ copy=no creates=/opt/zookeeper-{{ zookeeper_version }}
 
 - name: Symlink install directory
-  file: src=/opt/zookeeper-{{ zookeeper_version }} path=/opt/zookeeper state=link
+  file: src=/opt/zookeeper-{{ zookeeper_version }} path=/opt/zookeeper state=link force=yes
 
 - name: Set permissions to Zookeeper folder
   file: path=/opt/zookeeper/ owner=root group=root recurse=yes
