--- a/inventory.ini
+++ b/inventory.ini
@@ -36,9 +36,17 @@ postgresql_pg_hba="[{type: 'host', database: 'all', user: 'all', address: '0.0.0
 
 #-----------------------------------------------------START KAFKA & ZOOKEEPER-------------------------------------------------------------------
 [kafka-nodes]
-kafka-01 ansible_host=192.168.0.24 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.24
-kafka-02 ansible_host=192.168.0.26 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.26
-kafka-03 ansible_host=192.168.0.22 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.22
+192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.21
+192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.28
+192.168.0.30 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.30
+
+[zookeeper-nodes]
+192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.21
+192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.28
+192.168.0.30 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.30
+
+[kafka-nodes:vars]
+kafka_zookeeper_connect='localhost:2181'
 #-----------------------------------------------------END KAFKA & ZOOKEEPER-------------------------------------------------------------------
 
 #-----------------------------------------------------START KUBERNETES-------------------------------------------------------------------
