--- a/ansible-cookbooks/kafka-zookeeper/site.yml
+++ b/ansible-cookbooks/kafka-zookeeper/site.yml
@@ -1,5 +1,5 @@
 ---
 
-- import_playbook: playbooks/base.yml
-- import_playbook: playbooks/install_kafka_zkp.yml
-- import_playbook: playbooks/configure_kafka.yml
+- import_playbook: base.yml
+- import_playbook: install_kafka_zkp.yml
+- import_playbook: configure_kafka.yml
